minor formatting improvements

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -1,4 +1,6 @@
 %------------------------------------
+% Matthew A. Turner (maturner01@gmail.com) edited this template (11/2022) graciously provided by ...
+%
 % Dario Taraborelli
 % Typesetting your academic CV in LaTeX
 %
@@ -74,7 +76,7 @@ bookmarks, colorlinks, breaklinks,
 
 % DOCUMENT
 \begin{document}
-  {\LARGE Matthew A. Turner}\\[1cm]
+  {\LARGE Matthew A. Turner}\\[1em]
 \begin{minipage}[t]{0.5\textwidth}
   Stanford Doerr School of Sustainability \\
   Division of Social Sciences \\
@@ -86,15 +88,15 @@ bookmarks, colorlinks, breaklinks,
   \Telefon\quad\texttt{+1 585 350 8649} \\
   \Letter\quad\href{mailto:maturner@stanford.edu}{maturner@stanford.edu}\\
   \githubsymbol\quad\href{https://github.com/mt-digital}{mt-digital} \\
-  \twittersymbol\quad\href{https://github.com/mt-digital}{mt-digital} \\
+  \twittersymbol\quad\href{https://twitter.com/MATurnerPhD}{MATurnerPhD} \\
   \monitorsymbol\quad\href{https://mt.digital}{https://mt.digital}
 \end{minipage}
-\\[1.5em]
+\\[.75em]
 
 
 % \hrule
 \section*{Current position}
-\years{2021-} \emph{Postdoctoral fellow}, Stanford University, USA
+\years{2021-} \emph{Postdoctoral scholar}, Stanford University, USA
 
 %%\hrule
 % \section*{Areas of specialization}
@@ -205,7 +207,7 @@ Texas. \lurl{https://www.researchgate.net/publication/274720620_Experimental_and
 \subsection{Code and tools}
 
 \textbf{Turner MA}. \texttt{iatv}: Python API for interacting with the Internet
-Archive's TV News Archive. \lurl{https://github.com/mt-digital/iatv} \\
+Archive's TV News Archive. \lurl{https://github.com/mt-digital/iatv}
 
 \textbf{Turner MA}. \texttt{iatv-research.com}: free, public web interface to download
 CSV-formatted Internet Archive TV News Archive search results. \lurl{http://iatv-research.com}
@@ -321,7 +323,7 @@ Communication and the Environment in Washington, DC.
 %\hrule
 \section*{Reviewer service}
 
-\emph{Evolutionary Human Sciences} $~\cdot~$ \emph{Cognitive Processing} $~\cdot~$ \emph{Psychological Review} $~\cdot~$ \emph{Society for Personality and Social Psychology Annual Convention} $~\cdot~$ \emph{Cognitive Systems Research}
+\emph{Psychological Review} $~\cdot~$ \emph{Evolutionary Human Sciences} $~\cdot~$ \emph{Cognitive Processing} $~\cdot~$ \emph{Society for Personality and Social Psychology Annual Convention} $~\cdot~$ \emph{Cognitive Systems Research}
 
 %\vspace{1cm}
 \section*{Skills}
