--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -124,15 +124,16 @@ bookmarks, colorlinks, breaklinks,
 \section*{Education}
 \noindent
   \years{2021}\textsc{PhD}, Cognitive and Information 
-      Sciences, \emph{University of California, Merced}. Chair: Paul E.
+      Sciences, \emph{University of California, Merced}. \\Chair: Paul E.
       Smaldino. \\
-  \years{2012}\textsc{MS} in Applied Physics, \emph{Rice University}\\
-  \years{2008}\textsc{BS} in Physics, Mathematics \emph{Syracuse University}
+  \years{2012}\textsc{MS}, Applied Physics, \emph{Rice University}\\
+  \years{2008}\textsc{BS}, Physics, Mathematics \emph{Syracuse University}
 
 % \hrule
 \section*{Grants, honors, and awards}
 \noindent
-\years{2022-2024}Pandemic Preparedness Postdoctoral Fellowship \\
+\years{2023}Cognitive Science Society Conference Diversity \& Social Inequality Award \lurl{https://cognitivesciencesociety.org/conference-awards/} \\
+\years{2022-2024}Pandemic Preparedness Hub Postdoctoral Fellowship \lurl{https://pandemichub.stanford.edu/fellows/}\\
 \years{2020-2021}NSF Research Training (NRT) Program in Intelligent Adaptive
 Systems \lurl{https://nrt-ias.ucmerced.edu/content/matthew-turner} \\
 \years{2015} Research Data Alliance Early Career Fellow 
@@ -147,9 +148,14 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
 
 \setlength{\parskip}{10pt}
 
-  \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2022). The Form of
-  Uncertainty Affects Selection for Social Learning. \emph{Under review}.
-  \lurl{https://osf.io/preprints/socarxiv/brqmn/}
+  \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
+    Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs
+    support the diffusion of climate change adaptations. \emph{Forthcoming in} Phil. Trans. B \emph{theme issue, ``Climate
+    change adaptation needs a science of culture''.} \lurl{https://osf.io/preprints/socarxiv/28eaj/}
+
+  \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2023). The Form of
+  Uncertainty Affects Selection for Social Learning. \emph{Human Evolutionary Sciences}.
+  \lurl{https://www.cambridge.org/core/journals/evolutionary-human-sciences/article/form-of-uncertainty-affects-selection-for-social-learning/18B581D90A78CE094194C24C59757F5B}
 
   \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2022). Some
   forms of uncertainty may suppress the evolution of social
@@ -187,6 +193,10 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
     Quantum and electromagnetic propagation with the conjugate symmetric
     Lanczos method. \emph{Journal of Chemical Physics}, 128.
 
+    \subsection{Working papers and preprints}
+
+
+
     \subsection{Patent}
 
   Kelly KF, Baraniuk RG, Woods G, Sun T, \textbf{Turner MA}. U.S. Patent No. 9,124,755. 
@@ -206,6 +216,13 @@ Texas. \lurl{https://www.researchgate.net/publication/274720620_Experimental_and
 
 \subsection{Code and tools}
 
+\textbf{Turner MA}. \texttt{SustainableCBA}: Social learning of adaptive behaviors in a
+metapopulation with a minority and majority group.
+\lurl{https://github.com/eehh-stanford/SustainableCBA}
+
+\textbf{Turner MA}. \texttt{UncMod}: Model for analyzing social learning evolution in uncertain
+environments. \lurl{https://github.com/mt-digital/UncMod}
+
 \textbf{Turner MA}. \texttt{iatv}: Python API for interacting with the Internet
 Archive's TV News Archive. \lurl{https://github.com/mt-digital/iatv}
 
@@ -219,13 +236,17 @@ model. \lurl{https://prms-python.github.io/PRMS-Python/build/html/index.html}
 
 \subsection{Conference talks}
 
+    \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2023, September). \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
+    Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs for promoting the diffusion of climate change and public health adaptations. 45th Annual Meeting of the Cognitive Science Society.
+    Sydney, New South Wales, Australia.
+
     \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2022, September). Some forms of
     uncertainty may suppress the evolution of social learning. 4th Cultural Evolution Society
     Conference. Aarhus University, Denmark. 
 
     \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2022, July). Some forms of
     uncertainty may suppress the evolution of social learning. 44th Annual Meeting of the
-    Cognitive Science Society. Toronto, Canada. 
+    Cognitive Science Society. Toronto, Ontario, Canada. 
 
     \textbf{Turner MA}, (2022, July) Group polarization or simple consensus?
     A generative model that shows many group polarization detections are
@@ -323,7 +344,8 @@ Communication and the Environment in Washington, DC.
 %\hrule
 \section*{Reviewer service}
 
-\emph{Psychological Review} $~\cdot~$ \emph{Evolutionary Human Sciences} $~\cdot~$ \emph{Cognitive Processing} $~\cdot~$ \emph{Society for Personality and Social Psychology Annual Convention} $~\cdot~$ \emph{Cognitive Systems Research}
+\emph{Psychological Review} $~\cdot~$ \emph{Journal of Matehematical Sociology} $~\cdot~$ \\
+\emph{Evolutionary Human Sciences} $~\cdot~$ \emph{Journal of Artificial Societies and Social Simulation} $~\cdot~$ \emph{Cognitive Processing} $~\cdot~$ \emph{Society for Personality and Social Psychology Annual Convention} $~\cdot~$ \emph{Cognitive Systems Research}
 
 %\vspace{1cm}
 \section*{Skills}
